// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship API service addAppContact posts a new app contact 1`] = `
Object {
  "email": "josh@bend.er",
  "isConfirmed": false,
  "notificationPreferences": Object {
    "failedPublish": false,
    "newVersion": true,
    "successfulPublish": true,
  },
}
`;

exports[`Ship API service confirmEmail calls the API with the confirm token 1`] = `
Object {
  "app": Object {
    "appSlug": "app-slug",
    "id": "app-id",
  },
  "appContact": Object {
    "email": "some-email",
    "id": "app-contact-id",
    "notificationPreferences": Object {
      "failedPublish": false,
      "newVersion": true,
      "successfulPublish": false,
    },
  },
}
`;

exports[`Ship API service getApp fetches a version for an app 1`] = `
Object {
  "appSlug": "such-a-nice-app",
}
`;

exports[`Ship API service getAppVersion fetches a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "description": "A description",
  "id": 123,
  "publicInstallPageURL": "def.a.valid.url",
  "publicInstallPageUrl": undefined,
  "shortDescription": "A short description",
  "supportedDeviceTypes": Array [],
  "whatsNew": "Something new",
}
`;

exports[`Ship API service getAppVersionEvents fetches the events for an app version 1`] = `
Array [
  Object {
    "createdAt": 2019-10-10T00:00:00.000Z,
    "id": "an-id",
    "logDownloadUrl": "http://log.url",
    "status": "in-progress",
    "text": "some-string",
    "updatedAt": 2019-10-11T00:00:00.000Z,
  },
]
`;

exports[`Ship API service getAppVersionList fetches a list of versions for an app 1`] = `
Array [
  Object {
    "appInfo": Object {
      "app_icon_url": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
      "title": "An app",
    },
    "appName": "An app",
    "appSlug": "an-app-slug",
    "buildNumber": "456",
    "iconUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "id": 123,
  },
]
`;

exports[`Ship API service getSettings fetches settings for an app 1`] = `
Object {
  "androidSettings": Object {
    "selectedKeystoreFile": "whatever",
    "selectedServiceAccount": "does not matter",
  },
  "projectType": "android",
}
`;

exports[`Ship API service getTestDevices fetches test devices for an app 1`] = `
Array [
  Object {
    "deviceId": "some-device-id-01",
    "deviceType": "ios",
    "owner": "test-user-1",
  },
  Object {
    "deviceId": "some-device-id-02",
    "deviceType": "android",
    "owner": "test-user-1",
  },
  Object {
    "deviceId": "some-device-id-03",
    "deviceType": "ios",
    "owner": "test-user-2",
  },
]
`;

exports[`Ship API service listAppContacts fills isConfimed properly 1`] = `
Array [
  Object {
    "email": "not confirmed 1",
    "isConfirmed": false,
  },
  Object {
    "email": "not confirmed 2",
    "isConfirmed": false,
  },
  Object {
    "email": "not confirmed 3",
    "isConfirmed": false,
  },
  Object {
    "email": "confirmed",
    "isConfirmed": true,
  },
]
`;

exports[`Ship API service listAppContacts lists all app contacts 1`] = `
Array [
  Object {
    "email": "aaa",
    "isConfirmed": false,
    "notificationPreferences": Object {
      "newVersion": true,
    },
  },
  Object {
    "email": "bbb",
    "isConfirmed": false,
  },
  Object {
    "email": "ccc",
    "isConfirmed": false,
  },
]
`;

exports[`Ship API service updateAppContactNotificationPreferences updates an app contact's notification preferences 1`] = `
Object {
  "id": "abc-123",
  "notificationPreferences": Object {
    "failedPublish": false,
    "newVersion": true,
    "successfulPublish": false,
  },
}
`;

exports[`Ship API service updateAppVersion updates a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "id": 123,
}
`;

exports[`Ship API service updateSettings updates settings for an app 1`] = `
Object {
  "androidSettings": Object {
    "selectedKeystoreFile": "keystore-filename",
    "selectedServiceAccount": "service-account-filename",
    "track": "Release",
  },
  "androidWorkflow": "All",
  "iosSettings": Object {
    "appSku": "Fill",
    "appSpecificPassword": "Fill",
    "appleDeveloperAccountEmail": "some.email@addr.ess",
    "includeBitCode": true,
    "selectedAppStoreProvisioningProfile": "prov-profile-id",
    "selectedCodeSigningIdentity": "code-signing-identity-id",
  },
  "iosWorkflow": "All",
}
`;

exports[`Ship API service uploadScreenshots calls the api 1`] = `
Array [
  Object {
    "filename": "some-file.png",
    "uploadUrl": "http://some.url?token=123",
  },
]
`;
